fixes overflow right padding, removes manifest component

--- a/src/index.css
+++ b/src/index.css
@@ -27,5 +27,11 @@
     overflow: hidden;
 }
 .scrollable-page {
-    overflow: scroll;
+    overflow: auto;
+    overflow-x: hidden;
+}
+
+body {
+    padding: 0;
+    margin: 0;
 }
